Исправил баг отправки сообщений через телеграм.

--- a/www/index.html
+++ b/www/index.html
@@ -409,7 +409,7 @@
                                 <p class="p_container_checkbox"><input ng-model='edit_settings._system.auto_update' type="checkbox"  id="auto_update"> <label class="text-info text-checkbox" for="auto_update">Автообновление приложения<span class='required' title="Поле обязательное для заполнения"> *</span></p>
                             </div>
                             <div class='col-sm-12 setting_form'>
-                                <label class="text-info">Время задержки между отправками СМС сообщений, в миллисекундах. (-1 без задержки)<span class='required' title="Поле обязательное для заполнения"> *</span></label>
+                                <label class="text-info">Время задержки между отправками сообщений, в миллисекундах. (-1 без задержки)<span class='required' title="Поле обязательное для заполнения"> *</span></label>
                                 <input ng-model='edit_settings._system.betweenTimeSMS' type="text" class="form-control" placeholder="30000"  title="Время задержки между отправками СМС сообщений, в миллисекундах">
                             </div>
                         </div>
